--- a/angular.json
+++ b/angular.json
@@ -47,7 +47,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.less"
+              "src/styles.less",
+              "./node_modules/ngx-lightbox/lightbox.css"
             ],
             "scripts": []
           },
