change header and add shared-styles

--- a/angular.json
+++ b/angular.json
@@ -36,19 +36,17 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/untitled2",
+            "outputPath": "dist/trubochist",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "aot": false,
             "assets": [
-              "src/favicon.ico",
               "src/assets"
             ],
             "styles": [
-              "src/styles.less",
-              "./node_modules/ngx-lightbox/lightbox.css"
+              "src/styles.less"
             ],
             "scripts": []
           },
@@ -109,7 +107,6 @@
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "assets": [
-              "src/favicon.ico",
               "src/assets"
             ],
             "styles": [
