--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@angular/platform-browser-dynamic": "~8.2.5",
     "@angular/router": "~8.2.5",
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
+    "body-parser": "latest",
     "bootstrap": "4.3.1",
+    "express": "latest",
+    "nodemailer": "^6.3.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "ymaps": "^0.2.1",
@@ -33,10 +36,11 @@
     "@angular/cli": "~8.3.4",
     "@angular/compiler-cli": "~8.2.5",
     "@angular/language-service": "~8.2.5",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
+    "cors": "^2.8.5",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
