--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "latest",
     "bootstrap": "4.3.1",
     "express": "latest",
+    "less": "^3.10.3",
     "nodemailer": "^6.3.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
