--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "4.3.1",
     "express": "latest",
     "less": "^3.10.3",
+    "ng-yandex-metrika": "^3.0.2",
     "nodemailer": "^6.3.0",
     "prerender-node": "^3.2.5",
     "rxjs": "~6.4.0",
